--- a/css/main.css
+++ b/css/main.css
@@ -2,15 +2,76 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: "Lato", sans-serif;
 }
 
-.container {
-  display: flex;
-  justify-content: space-evenly;
+#hamburger {
+  font-size:30px;
+  padding: 10px;
+  cursor:pointer;
+}
+
+/* The side navigation menu */
+#sidenav {
+  height: 100%; /* 100% Full-height */
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: #111; /* Black*/
+  overflow-x: hidden;
+  padding-top: 60px; /* Place content 60px from the top */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+/* The navigation menu links */
+#sidenav a, input {
+  padding: 8px 8px 8px 8px;
+  text-decoration: none;
+  font-size: 18px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+#sidenav a:hover {
+  color: #f1f1f1;
+}
+
+#sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 10px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+#main {
   height: 100%;
 }
 
 #map {
   height: 100%;
-  flex-grow: 2;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+input {
+  margin: 8px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav */
+@media screen and (max-height: 450px) {
+  .sidenav a, form {
+    font-size: 15px;
+  }
+
+  #hamburger {
+    font-size:25px;
+  }
 }
