--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: "Lato", sans-serif;
+  font-size: 30px;
 }
 
 #hamburger {
@@ -67,6 +68,11 @@ input {
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav */
 @media screen and (max-height: 450px) {
+
+  html, body {
+  font-size: 25px;
+  }
+  
   .sidenav a, form {
     font-size: 15px;
   }
